@@ -3,6 +3,6 @@ functioncall3.v
 --module main --bound 0
 ^EXIT=0$
 ^SIGNAL=0$
-^UNSAT: No counterexample found within bound$
+^UNSAT: .*$
 --
 ^warning: ignoring
